--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "framer-motion": "^7.5.3",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "remeda": "^1.1.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.7.2",
