--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
-    "remeda": "^1.1.0"
+    "react-icons": "^4.6.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.7.2",
